# csdl_om_connect

./: .gitignore  README.md  changelog.md  pyproject.toml
.github/workflows/: install_test.yml
csdl_om_connect/: __init__.py  generate_explicit_component.py  generate_explicit_operation.py
examples/: ex1_om_comp_to_csdl.py  ex2_om_group_to_csdl.py  ex3_om_prob_to_csdl.py  ex4_csdl_sim_to_om.py
tests/: test_explicit_component.py  test_explicit_operation.py
